@@ -1,0 +1,61 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\name{mhtplot2d}
+\alias{mhtplot2d}
+\title{2D Manhattan plot}
+\usage{
+mhtplot2d(
+  d,
+  snp_name = "SNP",
+  snp_chr = "Chr",
+  snp_pos = "bp",
+  gene_chr = "p.chr",
+  gene_start = "p.start",
+  gene_end = "p.end",
+  protein = "p.target.short",
+  gene = "p.gene",
+  lp = "log10p",
+  cis = "cis",
+  plot = TRUE,
+  cex = 0.6
+)
+}
+\arguments{
+\item{d}{Data to be used.}
+
+\item{snp_name}{variant name.}
+
+\item{snp_chr}{variant chromosome.}
+
+\item{snp_pos}{variant position.}
+
+\item{gene_chr}{gene chromosome.}
+
+\item{gene_start}{gene start position.}
+
+\item{gene_end}{gene end position.}
+
+\item{protein}{protein name.}
+
+\item{gene}{gene name.}
+
+\item{lp}{log10(p).}
+
+\item{cis}{cis variant when TRUE.}
+
+\item{plot}{to plot when TRUE.}
+
+\item{cex}{extension factor.}
+}
+\value{
+positional information.
+}
+\description{
+2D Manhattan plot
+}
+\examples{
+
+INF <- Sys.getenv("INF")
+d <- read.csv(file.path(INF,"work","INF1.merge.cis.vs.trans"),as.is=TRUE)
+r <- mhtplot2d(d)
+}
